[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://spaceshooter/Bonus/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://spaceshooter/Bonus/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://spaceshooter/PNG/UI/buttonBlue.png" type="Texture" id=4]
[ext_resource path="res://spaceshooter/PNG/UI/buttonRed.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 120, 20 )
_sections_unfolded = [ "Resource" ]

[node name="Interfaz" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -51.0
margin_right = 51.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="MensajeLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.0
margin_top = -263.0
margin_right = 260.0
margin_bottom = -135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Mars"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="MensajeTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="ButtonPlay" type="TouchScreenButton" parent="." index="3"]

position = Vector2( 69.819, 828.024 )
scale = Vector2( 1.03032, 1.18452 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="ButtonExit" type="TouchScreenButton" parent="." index="4"]

position = Vector2( 343.323, 827.166 )
scale = Vector2( 1.03032, 1.18452 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]

[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]

[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonPlay2_pressed"]


